--- a/tech/Covid_Vaccine_Comparison.html
+++ b/tech/Covid_Vaccine_Comparison.html
@@ -32,15 +32,15 @@
                     <!-- Breaking News Area -->
                     <div class="col-12 col-md-6">
                         <div class="breaking-news-area">
-                            <h5 class="breaking-news-title">Breaking news</h5>
+                            <h5 class="breaking-news-title">近日要闻</h5>
                             <div id="breakingNewsTicker" class="ticker">
                                 <ul>
-                                    <li><a href="#">Brexit breakthrough in Brussels comes after week of drama</a></li>
-                                    <li><a href="#">Brexit breakthrough in Brussels</a></li>
-                                    <li><a href="#">Brexit breakthrough in Brussels comes after week of drama</a></li>
-                                    <li><a href="#">Brex comes after week of drama</a></li>
-                                    <li><a href="#">Brexit breakthrough in Bweek of drama</a></li>
-                                    <li><a href="#">Brexit bssels comes after week of drama</a></li>
+                                    <li><a href="#">[2021/6/20]中国累计报告接种新冠疫苗超10亿剂次</a></li>
+                                    <li><a href="#">[2021/6/19]中国塔里木盆地新发现10亿吨超深油气区</a></li>
+                                    <li><a href="#">[2021/6/18]美俄日内瓦峰会结束</a></li>
+                                    <li><a href="#">[2021/6/16]中国神州12号飞船将在6月17日发射升空</a></li>
+                                    <li><a href="#">[2021/6/15]和贝佐斯飞往太空的票价：2800万美元</a></li>
+                                    <li><a href="#">[2021/6/13]欧盟峰会：中国，气候，发展中国家</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -53,87 +53,87 @@
                                     <li>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>eur/usd</span>
-                                                <span>1.1862</span>
+                                                <span>麦迪逊最高气温</span>
+                                                <span>6.23</span>
                                             </div>
                                             <div class="stock-index minus-index">
-                                                <h4>0.18</h4>
+                                                <h4>26℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>BTC/usd</span>
-                                                <span>15.674.99</span>
+                                                <span>麦迪逊最低气温</span>
+                                                <span>6.23</span>
                                             </div>
                                             <div class="stock-index plus-index">
-                                                <h4>8.60</h4>
+                                                <h4>14℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>ETH/usd</span>
-                                                <span>674.99</span>
+                                                <span>麦迪逊天气</span>
+                                                <span>6.23</span>
                                             </div>
-                                            <div class="stock-index minus-index">
-                                                <h4>13.60</h4>
+                                            <div class="text" >
+                                                <h4 style="color:white">暴雨</h4>
                                             </div>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>eur/usd</span>
-                                                <span>1.1862</span>
+                                                <span>麦迪逊最高气温</span>
+                                                <span>6.24</span>
                                             </div>
                                             <div class="stock-index minus-index">
-                                                <h4>0.18</h4>
+                                                <h4>25℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>BTC/usd</span>
-                                                <span>15.674.99</span>
+                                                <span>麦迪逊最低气温</span>
+                                                <span>6.24</span>
                                             </div>
                                             <div class="stock-index plus-index">
-                                                <h4>8.60</h4>
+                                                <h4>18℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>ETH/usd</span>
-                                                <span>674.99</span>
+                                                <span>麦迪逊天气</span>
+                                                <span>6.24</span>
                                             </div>
-                                            <div class="stock-index minus-index">
-                                                <h4>13.60</h4>
+                                            <div class="text" >
+                                                <h4 style="color:white">暴雨</h4>
                                             </div>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>eur/usd</span>
-                                                <span>1.1862</span>
+                                                <span>麦迪逊最高气温</span>
+                                                <span>6.25</span>
                                             </div>
                                             <div class="stock-index minus-index">
-                                                <h4>3.95</h4>
+                                                <h4>26℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>BTC/usd</span>
-                                                <span>15.674.99</span>
+                                                <span>麦迪逊最低气温</span>
+                                                <span>6.25</span>
                                             </div>
                                             <div class="stock-index plus-index">
-                                                <h4>4.78</h4>
+                                                <h4>19℃</h4>
                                             </div>
                                         </div>
                                         <div class="single-stock-report">
                                             <div class="stock-values">
-                                                <span>ETH/usd</span>
-                                                <span>674.99</span>
+                                                <span>麦迪逊天气</span>
+                                                <span>6.25</span>
                                             </div>
-                                            <div class="stock-index minus-index">
-                                                <h4>11.37</h4>
+                                            <div class="text" >
+                                                <h4 style="color:white">雷阵雨</h4>
                                             </div>
                                         </div>
                                     </li>
@@ -157,7 +157,7 @@
                     <!-- Header Advert Area -->
                     <div class="col-12 col-md-8">
                         <div class="header-advert-area">
-                            <a href="#"><img src="../img/bg-img/top-advert.png" alt="header-add"></a>
+                            <img src="../img/bg-img/madnews_bg.jpg" alt="header-add" >
                         </div>
                     </div>
                 </div>
@@ -177,37 +177,31 @@
                                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">目录 Pages</a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                 <a class="dropdown-item" href="../index.html">首页 Home</a>
-                                                <a class="dropdown-item" href="../catagory.html">分类 Category</a>
+                                                <a class="dropdown-item" href="../category.html">分类 Category</a>
                                                 <a class="dropdown-item" href="../about-us.html">介绍 About</a>
                                                 <a class="dropdown-item" href="../contact.html">平台 Platform</a>
                                             </div>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">政治 Politics</a>
+                                            <a class="nav-link" href="../politics/the_eighteenth_brumaire_of_donald_trump_1.html">政治 Politics</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">财经 Business</a>
+                                            <a class="nav-link" href="../business/single-post.html">财经 Business</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">教育 Education</a>
+                                            <a class="nav-link" href="../society/Tokyo_Olympics.html">社会 Society</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">社会 Society</a>
+                                            <a class="nav-link" href="../tech/Covid_Vaccine_Comparison.html">科技 Tech</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">科技 Tech</a>
+                                            <a class="nav-link" href="../sport/Chinese_Women_Football.html">文体 Recreation</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">体育 Sport</a>
+                                            <a class="nav-link" href="../news/single-post.html">新闻评论 Commentary</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">娱乐 Entertainment</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#">新闻评论 News</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#">疫情 Pandemic</a>
+                                            <a class="nav-link" href="../pandemic/pandemic.html">疫情 Pandemic</a>
                                         </li>
                                     </ul>
                                     <!-- Search Form -->
@@ -233,7 +227,7 @@
 
     <section class="single-post-area">
         <!-- Single Post Title -->
-        <div class="single-post-title bg-img background-overlay" style="background-image: url(img/0.jpg);">
+        <div class="single-post-title bg-img background-overlay" style="background-image: url(../img/bg-img/tech_bg.png);">
             <div class="container h-100">
                 <div class="row h-100 align-items-end">
                     <div class="col-12">
