--- a/tech/Covid_Vaccine_Comparison.html
+++ b/tech/Covid_Vaccine_Comparison.html
@@ -237,7 +237,8 @@
                                 <a href="#">Tech</a>
                             </div>
                             <h2 class="font-pt">新冠疫苗之比较</h2>
-                            <p>不知道, 2021</p>
+                            <p>January 1, 2021</p>
+                            <p>作者：待添加</p>
                         </div>
                     </div>
                 </div>
