--- a/society/criminal_procedure_1.html
+++ b/society/criminal_procedure_1.html
@@ -209,13 +209,13 @@
                                             <a class="nav-link" href="../pandemic/pandemic.html">疫情 Pandemic</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../campus/pandemic.html">校园 Campus</a>
+                                            <a class="nav-link" href="../campus/category.html">校园 Campus</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../global/pandemic.html">国际 Global</a>
+                                            <a class="nav-link" href="../global/category.html">国际 Global</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../history/pandemic.html">历史 History</a>
+                                            <a class="nav-link" href="../history/category.html">历史 History</a>
                                         </li>
                                     </ul>
                                     <!-- Search Form -->
